syntax = "proto3";

import "github.com/gogo/protobuf/gogoproto/gogo.proto";

option go_package = "masterpb";

option optimize_for = SPEED;
option (gogoproto.marshaler_all) = true;
option (gogoproto.sizer_all) = true;
option (gogoproto.unmarshaler_all) = true;
option (gogoproto.gostring_all) = false;
option (gogoproto.equal_all) = true;
option (gogoproto.verbose_equal_all) = false;
option (gogoproto.goproto_stringer_all) = false;
option (gogoproto.stringer_all) =  true;
option (gogoproto.populate_all) = true;
option (gogoproto.testgen_all) = false;
option (gogoproto.benchgen_all) = false;
option (gogoproto.goproto_getters_all) = false;

message RuntimeInfo {
    string app_version = 1;
    string start_time  = 2;
    string go_version  = 3;
    string platform    = 4;
}

message RaftStatus {
    uint64 id                             = 1 [(gogoproto.customname) = "ID", (gogoproto.casttype) = "github.com/tiglabs/baud/proto/metapb.ReplicaID"];
    uint64 term                           = 2;
    uint64 index                          = 3;
    uint64 commit                         = 4;
    uint64 applied                        = 5;
    repeated RaftFollowerStatus followers = 6 [(gogoproto.nullable) = false];
}

message RaftFollowerStatus {
    uint64 id           = 1 [(gogoproto.customname) = "ID", (gogoproto.casttype) = "github.com/tiglabs/baud/proto/metapb.ReplicaID"];
    uint32 nodeID       = 2 [(gogoproto.customname) = "NodeID", (gogoproto.casttype) = "github.com/tiglabs/baud/proto/metapb.NodeID"];
    uint64 match        = 3;
    uint64 commit       = 4;
    uint64 next         = 5;
    uint64 down_seconds = 6;
    string state        = 7;
}

message NodeSysStats {
    // Memory
    uint64 memory_total                      = 1;
    uint64 memory_used_rss                   = 2;
    uint64 memory_used                       = 3;
    uint64 memory_free                       = 4;
    double memory_used_percent               = 5;
    uint64 swap_memory_total                 = 6;
    uint64 swap_memory_used                  = 7;
    uint64 swap_memory_free                  = 8;
    double swap_memory_used_percent          = 9;
    // CPU
    double cpu_proc_rate                     = 10;
    uint32 cpu_count                         = 11;
    double load1                             = 12;
    double load5                             = 13;
    double load15                            = 14;
    // Disk
    uint64 disk_total                        = 15;
    uint64 disk_used                         = 16;
    uint64 disk_free                         = 17;
    double disk_proc_rate                    = 18;
    uint64 disk_read_byte_per_sec            = 19;
    uint64 disk_write_byte_per_sec           = 20;
    // Net
    uint64 net_io_in_byte_per_sec            = 21;
    uint64 net_io_out_byte_per_sec           = 22;
    uint32 net_tcp_connections               = 23;
    uint64 net_tcp_active_opens_per_sec      = 24;
    // server
    uint64 ops                               = 25;
}

message PartitionStats {
    uint64 size                = 1;
    uint64 ops                 = 2;
    uint64 bytes_in_per_sec    = 3;
    uint64 bytes_out_per_sec   = 4;
    uint64 total_commands_processed = 5;
    uint64 keyspace_misses     = 6;
}